--- a/success.html
+++ b/success.html
@@ -52,7 +52,7 @@
 <div class="container">
 
     <!-- LOGO TOP -->
-    <img src="../smm/images/logo.png" class="logo" alt="Zylovia">
+    <img src="../images/logo.png" class="logo" alt="Zylovia">
 
     <h2 class="thanks">Thank You!</h2>
 
