--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
     
 <div style="text-align:center;">
-    <img src="..Zylovia/images/logo.png" style="max-width:180px; margin:10px auto;">
+    <img src="../Zylovia/images/logo.png" style="max-width:180px; margin:10px auto;">
 </div>
 
 <div class="container">
