--- a/payment.html
+++ b/payment.html
@@ -71,13 +71,13 @@
 </head>
 <body>
     <div style="text-align:center;">
-    <img src="../images/logo.png" style="max-width:180px; margin:10px auto;">
+    <img src="../Zylovia/images/logo.png" style="max-width:180px; margin:10px auto;">
 </div>
 <div class="container">
     <h2>Scan & Pay using PhonePe / GPay / Paytm</h2>
 
     <!-- QR code (use your existing path) -->
-    <img src="../images/qr.jpeg" class="qr" alt="Scan QR">
+    <img src="../Zylovia/images/qr.jpeg" class="qr" alt="Scan QR">
 
     <p><strong>UPI Number:</strong> 9373140815</p>
 
