--- a/transaction.html
+++ b/transaction.html
@@ -37,7 +37,7 @@
 
 <!-- UNIVERSAL LOGO -->
 <div style="text-align:center;">
-    <img src="../images/logo.png" class="logo">
+    <img src="../Zylovia/images/logo.png" class="logo">
 </div>
 
 <div class="box">
