--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Zylovia SMM Panel</title>
+    <title> Zylovia </title>
     <link rel="stylesheet" href="style.css">
 
     <style>
