--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Zylovia SMM Panel</title>
+    <title>Zylovia </title>
     <link rel="stylesheet" href="style.css">
 
     <style>
@@ -56,7 +56,7 @@
 <body>
     
 <div style="text-align:center;">
-    <img src="../Zylovia/smm/images/logo.png" style="max-width:180px; margin:10px auto;">
+    <img src="../Zylovia/images/logo.png" style="max-width:180px; margin:10px auto;">
 </div>
 
 <div class="container">
@@ -148,7 +148,7 @@ const servicePrice = {
         "2 - 🎬 YouTube Native Ads Views | Non-Drop | 200K/Day Speed | Lifetime Refill | Minimum: 10K | ₹160 per 1000": 160,
         "3 - 🎬 YouTube Native Ads Views | Non-Drop | 500K/Day Speed | Lifetime Refill | Minimum: 10K | ₹180 per 1000": 180,
         "4 - 🎬 YouTube Native Ads Views | Non-Drop | 200K/Day Speed | Lifetime Refill | Minimum: 3K | ₹200 per 1000": 200
-    };
+};
 
 const services = {
     "📷 Instagram - Reel Views": [
